# StockThemes

./: .env  .gitignore  Cargo.toml  chrome.pid  config.toml  example.html  sectors_industries_etf_map.json  stock_store.toml
assets/stock_tags/: application.js
assets/stocks_themes/: application.js  fundamentals_chart.js  popup_api.js  popup_charts.js  rrg_chart.js  tag_mappings.js
assets/stocks_themes/controllers/: fundamentals_popup_controller.js  ticker_popup_controller.js
assets/tags_mgmt/: api.js  application.js  state.js  status.js  util.js
assets/tags_mgmt/controllers/: stock_list_controller.js  tag_list_controller.js  tags_page_controller.js  workspace_controller.js
migrations/: 001_create_stocks.sql  002_create_candles.sql  01_create_stocks.sql  02_create_perf.sql  03_create_candle.sql  04_alter_perf.sql  04_create_hourly_candles.sql  05_company_profile.sql  05_create_tags.sql  06_create_tag_categories.sql  06_create_tags.sql  07_create_tag_support.sql  08_create_fundamentals.sql  08_create_tag_suggestions.sql  09_drop_tag_suggestions_prompt_hash.sql
src/: browser.rs  config.rs  etf_map.rs  html_error.rs  lib.rs  metrics.rs  rrg_util.rs  rs.rs  store.rs  summary.rs  template.html  template.rs  util.rs  yf.rs
src/tags/: import.rs  mod.rs  routes.rs  stock_tags.rs  store.rs
src/tags/suggest/: handle.rs  mod.rs  parse.rs  prompt.rs  providers.rs  store.rs
src/trades/: candles.rs  mod.rs  parser.rs  routes.rs
src/tv/: fundamentals.rs  fundamentals_api.rs  mod.rs  perf_util.rs  screener_api.rs  screenshot.rs  stock_info_loader.rs  top_industry_groups.rs  top_stocks_fetcher.rs  tv_manager.rs
src/yf/: de.rs  error.rs  mod.rs  tests.rs  types.rs
templates/: rrg.html  sectors_industries_etf_map.json  stock_tags.html  stocks_themes.html  stocks_themes_old.html  tag_mgmt.html  tags_mgmt.html  trade_analyzer.html
