[package]
name = "stock_themes"
version = "1.0.0"
edition = "2024"

[[bin]]
name = "stock_themes"
path = "src/bin/stock_themes.rs"

[[bin]]
name = "top_stocks"
path = "src/bin/top_stocks.rs"

[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"

[dependencies]
clap = { version = "4.5", features = ["derive"] }

tokio = { version = "1", features = ["full"] }
futures = "0.3"
axum = "0.8"
chromiumoxide = { version = "0.8", features = ["tokio"] }

anyhow = "1"
rand = "0.9"
itertools = "0.14"
chrono = { version = "0.4", features = ["serde"] }
sysinfo = "0.37"

serde = { version = "1", features = ["derive"] }
toml = "0.9"
serde_json = "*"

log = "0.4"
env_logger = "0.11"
indicatif = "0.18.3"
