[package]
name = "stock_themes"
version = "1.0.0"
edition = "2024"

[[bin]]
name = "stock_themes"
path = "src/bin/stock_themes.rs"

[[bin]]
name = "top_stocks"
path = "src/bin/top_stocks.rs"

[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"

[dependencies]
clap = { version = "4.5", features = ["derive"] }

async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
axum = "0.8"
reqwest = { version = "0.13", features = ["json", "cookies", "gzip", "deflate"] }
chromiumoxide = { version = "0.8", features = ["tokio"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "chrono"] }

anyhow = "1"
rand = "0.10"
itertools = "0.14"
chrono = { version = "0.4", features = ["serde"] }
sysinfo = "0.38"

serde = { version = "1", features = ["derive"] }
toml = "1"
serde_json = "1.0"

log = "0.4"
env_logger = "0.11"
indicatif = "0.18.3"
askama = { version = "0.15", features = ["serde_json"] }
url = "2.5"
