[package]
name = "stock_themes"
version = "3.0.0"
edition = "2024"

[[bin]]
name = "stock_themes"
path = "src/bin/stock_themes.rs"

[[bin]]
name = "top_stocks"
path = "src/bin/top_stocks.rs"

[[bin]]
name = "trade_analyzer"
path = "src/bin/trade_analyzer.rs"

[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"

[dependencies]
clap = { version = "4.5", features = ["derive"] }

async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
axum = "0.8"
reqwest = { version = "0.13", features = ["json", "cookies", "gzip", "deflate"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "chrono"] }
chrome_driver = { git = "https://github.com/pbspbsingh/ChromeDriver" }

anyhow = "1"
rand = "0.10"
itertools = "0.14"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"

serde = { version = "1", features = ["derive"] }
toml = "1"
serde_json = "1.0"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
askama = { version = "0.15", features = ["serde_json"] }
url = "2.5"
include_dir = "0.7"
